Library/AXL(Library)/Dynamic Link/DAXA.h

typedef DWORD    PASCAL EXPORT funcAxaiExternalStartADC(long lModuleNo, long lSize, long *lpChannelPos);
typedef DWORD    PASCAL EXPORT funcAxaiExternalStopADC(long lModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiExternalReadFifoStatus(long lModuleNo, DWORD *dwpStatus);
typedef DWORD    PASCAL EXPORT funcAxaiExternalReadVoltage(long lModuleNo, long lSize, long *lpChannelPos, long lDataSize, long lBuffSize, long lStartDataPos, double *dpVolt, long *lpRetDataSize, DWORD *dwpStatus);
typedef DWORD    PASCAL EXPORT funcAxaoInfoGetModuleNoOfChannelNo(long lChannelNo, long *lpModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaoInfoGetChannelCount(long *lpChannelCount);
typedef DWORD    PASCAL EXPORT funcAxaoSetRange(long lChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoGetRange(long lChannelNo, double *dpMinVolt, double *dpMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoSetMultiRange(long lSize, long *lpChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoWriteVoltage(long lChannelNo, double dVolt);
typedef DWORD    PASCAL EXPORT funcAxaoWriteMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaoReadVoltage(long lChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaoReadMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaoPgSetUserPatternGenerator(long lChannelNo, long lLoopCnt, long lPatternSize, double *dpPattern);
typedef DWORD    PASCAL EXPORT funcAxaoPgGetUserPatternGenerator(long lChannelNo, long *lpLoopCnt, long *lpPatternSize, double *dpPattern);
typedef DWORD    PASCAL EXPORT funcAxaoPgSetUserInterval(long lChannelNo, double dInterval);
typedef DWORD    PASCAL EXPORT funcAxaoPgGetUserInterval(long lChannelNo, double *dpInterval);
typedef DWORD    PASCAL EXPORT funcAxaoPgGetStatus(long lChannelNo, long *lpIndexNum, long *lpLoopCnt, DWORD *dwpInBusy);
typedef DWORD    PASCAL EXPORT funcAxaoPgSetUserStart(long *lpChannelNo, long lSize);
typedef DWORD    PASCAL EXPORT funcAxaoPgSetUserStop(long *lpChannelNo, long lSize);
typedef DWORD    PASCAL EXPORT funcAxaPgSetUserDataReset(long lChannelNo);
typedef DWORD    PASCAL EXPORT funcAxaoSetNetworkErrorAct(long lChannelNo, DWORD dwSetValue);
typedef DWORD    PASCAL EXPORT funcAxaoSetNetworkErrorUserValue(long lChannelNo, double dVolt);
extern funcAxaiExternalStartADC                 *AxaiExternalStartADC;
extern funcAxaiExternalStopADC                  *AxaiExternalStopADC;
extern funcAxaiExternalReadFifoStatus           *AxaiExternalReadFifoStatus;
extern funcAxaiExternalReadVoltage              *AxaiExternalReadVoltage;
extern funcAxaoInfoGetModuleNoOfChannelNo       *AxaoInfoGetModuleNoOfChannelNo;
extern funcAxaoInfoGetChannelCount              *AxaoInfoGetChannelCount;
extern funcAxaoSetRange                         *AxaoSetRange;
extern funcAxaoGetRange                         *AxaoGetRange;
extern funcAxaoSetMultiRange                    *AxaoSetMultiRange;
extern funcAxaoWriteVoltage                     *AxaoWriteVoltage;
extern funcAxaoWriteMultiVoltage                *AxaoWriteMultiVoltage;
extern funcAxaoReadVoltage                      *AxaoReadVoltage;
extern funcAxaoReadMultiVoltage                 *AxaoReadMultiVoltage;
extern funcAxaoPgSetUserPatternGenerator        *AxaoPgSetUserPatternGenerator;
extern funcAxaoPgGetUserPatternGenerator        *AxaoPgGetUserPatternGenerator;
extern funcAxaoPgSetUserInterval                *AxaoPgSetUserInterval;
extern funcAxaoPgGetUserInterval                *AxaoPgGetUserInterval;
extern funcAxaoPgGetStatus                      *AxaoPgGetStatus;
extern funcAxaoPgSetUserStart                   *AxaoPgSetUserStart;
extern funcAxaoPgSetUserStop                    *AxaoPgSetUserStop;
extern funcAxaPgSetUserDataReset                *AxaPgSetUserDataReset;
extern funcAxaoSetNetworkErrorAct               *AxaoSetNetworkErrorAct;
extern funcAxaoSetNetworkErrorUserValue         *AxaoSetNetworkErrorUserValue;