Library/AXL(Library)/C#/AXA.cs


//==External Trigger Mode Function
//Start external trigger mode of the selected channels of specified input module.
//==================================================================================================//
// lSize           : Number of channels to use external trigger on specified input module
// *lpChannelPos   : Index of channels to use external trigger on specified input module
[DllImport("AXL.dll")] public static extern uint AxaiExternalStartADC(int lModuleNo, int lSize, ref int lpChannelPos);
//Stop external trigger mode of specified input module.
[DllImport("AXL.dll")] public static extern uint AxaiExternalStopADC(int lModuleNo);
//Return FIFO status of specified input module
//==================================================================================================//
// *dwpStatus      : FIFO_DATA_EXIST(0)
//                 : FIFO_DATA_EMPTY(1)
//                 : FIFO_DATA_HALF(2)
//                 : FIFO_DATA_FULL(6)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiExternalReadFifoStatus(int lModuleNo, ref uint upStatus);
//Read converted A/D value from external signal of specified input module.
// lSize           : Number of channels to read converted A/D value in specified input module
// *lpChannelPos   : Index of channels to read converted A/D value in specified input module
// lDataSize       : Number of maximum data to read converted A/D value by external trigger
// lBuffSize       : Size of externally allocated data buffer
// lStartDataPos   : Starting location of data buffer saving
// *dpVolt         : Two-demensional array pointer(for receiving value of converted to A/D)
// *lpRetDataSize  : Actually assigned number to data buffer(converted A/D value)
// *dwpStatus      : Return FIFO status when read converted A/D value from Fifo(H/W Buffer)
[DllImport("AXL.dll")] public static extern uint AxaiExternalReadVoltage(int lModuleNo, int lSize, ref int lpChannelPos, int lDataSize, int lBuffSize, int lStartDataPos, double[,] dpVolt, ref int lpRetDataSize, ref uint upStatus);

//========== API group of output module information search ========================================================================================
//Verify module number with specified output channel number
[DllImport("AXL.dll")] public static extern uint AxaoInfoGetModuleNoOfChannelNo(int lChannelNo, ref int lpModuleNo);


//Verify entire number of channel of analog output module
[DllImport("AXL.dll")] public static extern uint AxaoInfoGetChannelCount(ref int lpChannelCount);


//========== API group for output module setting and verification ========================================================================================
//Set output voltage range in specified output channel
//==================================================================================================//
// dMinVolt    : -10V Fix
// dMaxVolt    : 10V Fix
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaoSetRange(int lChannelNo, double dMinVolt, double dMaxVolt);


//Verify output voltage range in specified output channel
//==================================================================================================//
// dMinVolt    : -10V Fix
// dMaxVolt    : 10V Fix
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaoGetRange(int lChannelNo, ref double dpMinVolt, ref double dpMaxVolt);


//Set output voltage range in specified multiple output channels
//==================================================================================================//
// dMinVolt    : -10V Fix
// dMaxVolt    : 10V Fix
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaoSetMultiRange(int lSize, int[] lpChannelNo, double dMinVolt, double dMaxVolt);


//The Input voltage is output in specified output channel
[DllImport("AXL.dll")] public static extern uint AxaoWriteVoltage(int lChannelNo, double dVolt);


//The Input voltage is output in specified multiple output channel
[DllImport("AXL.dll")] public static extern uint AxaoWriteMultiVoltage(int lSize, int[] lpChannelNo, double[] dpVolt);


//Verify voltage which is output in specified output channel
[DllImport("AXL.dll")] public static extern uint AxaoReadVoltage(int lChannelNo, ref double dpVolt);


//Verify voltage which is output in specified multiple output channels
[DllImport("AXL.dll")] public static extern uint AxaoReadMultiVoltage(int lSize, int[] lpChannelNo, double[] dpVolt);

//============================ AXA User Define Pattern Generator ============================
// API function for setting 'Channel User Define Pattern Generator'
// Outputting pattern every time depending on AxaoPgSetUserInterval setting
// lLoopCnt       : '0'(Repeat input pattern infinitely), 'value' : Keep last pattern, After outputting input pattern for specified number of times
//                : (MAX : 60000)
// lPatternSize   : Number of input pattern(MAX : 8192)
[DllImport("AXL.dll")] public static extern uint AxaoPgSetUserPatternGenerator(int lChannelNo, int lLoopCnt, int lPatternSize, ref double dpPattern);

// API function for getting 'user define pattern generator'
[DllImport("AXL.dll")] public static extern uint AxaoPgGetUserPatternGenerator(int lChannelNo, ref int lpLoopCnt, ref int lpPatternSize, ref double dpPattern);

// API function for setting 'pattern generator interval' of corresponding channel
// Unit : us(Default resolution : 500uSec)
[DllImport("AXL.dll")] public static extern uint AxaoPgSetUserInterval(int lChannelNo, double dInterval);

// API function for getting 'pattern generator interval' of corresponding channel
[DllImport("AXL.dll")] public static extern uint AxaoPgGetUserInterval(int lChannelNo, ref double dpInterval);

// API function for getting 'Pattern Index / Loop Cnt' of corresponding channel
// In the case of status, following status can be included.
// lpIndexNum : The index of current user pattern
// lpLoopCnt : Number of currently running loop
// dwpInBusy : Driving status of Pattern Generator
[DllImport("AXL.dll")] public static extern uint AxaoPgGetStatus(int lChannelNo, ref int lpIndexNum, ref int lpLoopCnt, ref uint dwpInBusy);


// API function for start 'User Define Pattern Generator' of corresponding channel ('AO' output start)
// Inputting start channel number as an array
// Start pattern generator function simultaneously for input channel.
[DllImport("AXL.dll")] public static extern uint AxaoPgSetUserStart(ref int lpChannelNo, int lSize);


// API function for stopping 'User Define Pattern Generator' of corresponding channel ('AO' output stop)
// Output value is switched to 0 volt when output is stopped
[DllImport("AXL.dll")] public static extern uint AxaoPgSetUserStop(ref int lpChannelNo, int lSize);


// API function for clearing Pattern Data(Reset all areas to 0x00)
[DllImport("AXL.dll")] public static extern uint AxaPgSetUserDataReset(int lChannelNo);


// API function for setting output status by each channel when specified output module network is broken
//===============================================================================================//
// lChannelNo  : Channel number(Distributed slave products only)
// dwSetValue  : Setting value
//             : 1 --> Analog Max
//             : 2 --> Analog MIN
//             : 3 --> User Vaule(Default user value : 0V, You can change this value by 'AxaoSetNetworkErrorUserValue()')
//             : 4 --> Analog 0 V
//===============================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaoSetNetworkErrorAct(int lChannelNo, uint dwSetValue);

// API function for setting output status in bytes when specified output module network is broken
//===============================================================================================//
// lChannelNo  : Channel number(Distributed slave products only)
// dVolt       : Analog output voltage(User defined value)
//===============================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaoSetNetworkErrorUserValue(int lChannelNo, uint dVolt);


}
